# covid19-mt-bot

./: .env-template  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/covid/: entry.rs  mod.rs
