[package]
name = "covid19-mt-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
dotenv = "0.15.0"
reqwest = "0.11.10"
teloxide = "0.7.3"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
